[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "als"
version = "0.0.1"
authors = [
  { name="Long Vu", email="@gmail.com" },
]
description = "ALS analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"pandas",
	"python-dotenv"
	]

[project.urls]
Homepage = "https://github.com/lhvu2/als"
Issues = "https://github.com/lhvu2/als/issues"

